added Channel model
